--- a/about-us.css
+++ b/about-us.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background-image: url(https://www.pngmagic.com/product_images/light-orange-solid-color-background.jpg);
+    background-image: url(background-img.JPG);
 background-repeat: no-repeat;
 background-size: 100%;
 }
@@ -18,6 +18,7 @@ background-size: 100%;
     text-align: right;
 }
 
-.header-section{
+.header-section{ background-color:white;
+   
     text-align: center;
 }
