--- a/about-us.css
+++ b/about-us.css
@@ -1,4 +1,4 @@
-.top-section{
+.top-section{background-color:white;
 
     text-align: center;
 
@@ -8,11 +8,12 @@
 .paragraph-section{
     text-align: center;
     font-size: x-large;
+   background-color:tomato;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 body{
-    background-image: url(background-img.JPG);
+    background-image: url(food-background.jpg);
 background-repeat: no-repeat;
 background-size: 100%;
 
@@ -28,3 +29,7 @@ background-size: 100%;
     text-align: center;
 }
 
+.button-section{
+    text-align: center;
+  
+}
